Fix layout bug on live site

--- a/assets/css/taxonomies.tree.css
+++ b/assets/css/taxonomies.tree.css
@@ -12,8 +12,12 @@
 
 #taxonomies-resource-tab fieldset legend {
 	font-size: 13px;
+	width: auto !important;
+	margin-bottom: auto !important;
+	border: none !important;
 }
 
 #taxonomies-resource-tab fieldset label {
 	font-size: 11px;
+	display: inline !important;
 }
